# einx

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  LICENSE  README.md  changelog.md  pyproject.toml  readme.md  ruff.toml  setup.py  test.py
.github/workflows/: publish_pypi.yml  run_pytest.yml  run_typecheckers.yml
docs/: requirements.txt
docs/source/: api.rst  conf.py  generate_compiled_code.py  index.rst
docs/source/api/: adapters.rst  operations.rst  others.rst
docs/source/comparison/: ein.rst  namedtensor.rst  numpylike.rst  vmap.rst
docs/source/faq/: backend.rst  einops.rst  flatten.rst  solver.rst  universal.rst
docs/source/gettingstarted/: advanced.rst  backends.rst  basics.rst  cheatsheet.rst  commonnnops.rst  einsteinnotation.rst  gotchas.rst  gpt2.rst  installation.rst  introduction.rst  jit.rst  neuralnetworks.rst  overview.rst  performance.rst  tensormanipulation.rst  tutorial_neuralnetworks.rst  (+3 more)
einx/: __init__.py  arrayapi.py  backend.py  errors.py  jax.py  lru_cache.py  mlx.py  nn.py  numpy.py  param.py  tensorflow.py  tinygrad.py  torch.py  traceback_util.py  tree_util.py  type_util.py  types.py
einx/api/: __init__.py  dot.py  elementwise.py  rearrange.py  reduce.py  util.py  xmap.py
einx/backend/: __init__.py  _dask.py  _jax.py  _mlx.py  _numpy.py  _tensorflow.py  _tinygrad.py  _torch.py  base.py  register.py  tracer.py
einx/experimental/: __init__.py  functorchdim.py
einx/expr/: __init__.py  cse.py  solver.py  stage1.py  stage2.py  stage3.py  util.py
einx/nn/: __init__.py  equinox.py  flax.py  framework.py  haiku.py  keras.py  nn.py  torch.py
einx/op/: __init__.py  arange.py  dot.py  elementwise.py  elementwise_generated_types.py  generated_types.py  index.py  index_generated_types.py  map.py  rearrange.py  reduce.py  reduce_generated_types.py  solve.py  tensor.py  util.py  vmap.py  vmap_with_axis.py  xmap.py
einx/tracer/: __init__.py  compile.py  decorator.py  input.py  optimize.py  tensor.py  tracer.py
examples/: benchmark1.py  benchmark2.py  check_exceptions.py  train_equinox.py  train_flax.py  train_haiku.py  train_keras.py  train_torch.py
scripts/: benchmark1.py  benchmark2.py  generate_types.py  train_flax.py  train_haiku.py  train_torch.py
test/: conftest.py  test_adapt.py  test_backend_resolution.py  test_compare.py  test_compare_einops.py  test_compare_libs.py  test_compilation.py  test_dl.py  test_equinox_vmap.py  test_experimental.py  test_invalid_backend.py  test_invalid_backend_version.py  test_invalid_torch_version.py  test_nn.py  test_shapes.py  test_tensor_conversion.py  test_util.py  test_values.py
test_typechecking/: fail.py  pass.py
(+202 files in other folders)
