[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "einx"
version = "0.4.3"
requires-python = ">=3.10"
authors = [
    { name="Florian Fervers", email="florian.fervers@gmail.com" },
]
description = "Universal Notation for Tensor Operations in Python"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"

dependencies = [
    "numpy",
    "sympy",
    "frozendict",
]

[project.optional-dependencies]
torch = ["torch>=2.2"]
mlx = ["mlx"]

[project.urls]
Homepage = "https://github.com/fferflo/einx"
Source = "https://github.com/fferflo/einx"
Documentation = "https://einx.readthedocs.io"

[tool.setuptools.packages.find]
exclude = ["test_typechecking*"]

[tool.setuptools.package-data]
einx = ["py.typed"]